--- a/public/css/user/memo/index.css
+++ b/public/css/user/memo/index.css
@@ -1,5 +1,5 @@
 .music-area {
-    background: linear-gradient(180deg, #323047 0%, #323047 50%, #2A2745 50%, #2A2745 100%);
+    background: linear-gradient(180deg, #707070 0%, #707070 50%, #575757 50%, #575757 100%);
     border-radius: 7px 0 0 7px;
 }
 
